fix collapse

--- a/public/assets/css/components/sidebar.css
+++ b/public/assets/css/components/sidebar.css
@@ -64,6 +64,7 @@
     align-items: center;
     justify-content: space-between;
     cursor: pointer;
+    user-select: none;
 }
 
 .head-collapse:hover{
